fix: invisible text in active:focus:visited links

--- a/src/assets/styles/components/_link.scss
+++ b/src/assets/styles/components/_link.scss
@@ -88,7 +88,7 @@
 	}
 
 	&:visited:focus {
-		color: var(--focus-color);
+		color: var(--visited-color);
 
 		@supports (mask: url("../images/add.svg")) {
 			&::after {
@@ -105,6 +105,10 @@
 				background: var(--active-color);
 			}
 		}
+	}
+
+	&:active:focus:visited {
+		color: var(--active-color);
 	}
 
 	@supports (mask: url("../images/add.svg")) {
